# SnapKey

./: CMake-Build.bat  CMakeLists.txt  LICENSE  README.md  README_ja_JP.md  README_pt_BR.md  SnapKey.cpp  config.cfg  resources.rc  src  src.cpp
.github/workflows/: snapkey.yml
Build SnapKey/CMAKE-Build/: CMake-Build.bat
Build SnapKey/MSYS-Build/: MSYS-Build.bat  MSYS-Build.sh  resources.rc
Build SnapKey/Setup-Build/: setup.iss  wizard_large.xcf
meta/: backup.snapkey
src/: linux.cpp  windows.cpp
